// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Avatar match snapshot 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <img
      alt=""
      src="friend_avatar.jpg"
    />
  </div>
</DocumentFragment>
`;

exports[`Test Avatar use default avater 1`] = `
<DocumentFragment>
  <div
    class="avatar"
  >
    <img
      alt=""
      src="default.png"
    />
  </div>
</DocumentFragment>
`;
